# desktitle

./: AUTHORS  ChangeLog  Makefile.am  README  configure.ac  desktitle.edc  e_modules-desktitle.spec.in  uptime.edc
po/: bg.po  cs.po  de.po  el.po  eo.po  es.po  fi.po  fr.po  he.po  hr.po  hu.po  it.po  ja.po  lt.po  nb.po  nl.po  pl.po  pt.po  ru.po  sk.po  sv.po  tr.po  uk.po  zh_CN.po
src/: e_mod_config.c  e_mod_main.c
